# ScaleLLM

./: .clang-format  .clang-format-ignore  .clang-tidy  .cppcheck-suppress  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.devel  MANIFEST.in  README.md  compile_commands.json  entrypoint.sh  gongfeng-copilot-vscode-latest (2).vsix  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  rope_scaling.py  scalellm.yml  setup.py  setup.sh  vcpkg.json
python/scalellm/: CMakeLists.txt  __init__.py  downloader.py  llm.py  llm_engine.py  output.py  pybind11
src/: .clang-tidy  CMakeLists.txt  example.cpp
src/benchmark/: CMakeLists.txt  activation_benchmark.cpp  attention_benchmark.cpp  layernorm_benchmark.cpp
src/chat_template/: CMakeLists.txt  chat_template.h  coded_chat_template.cpp  coded_chat_template.h  common_chat_template.cpp  common_chat_template.h  jinja_chat_template.cpp  jinja_chat_template.h  jinja_chat_template_test.cpp
src/common/: CMakeLists.txt  arg.h  array.h  array_test.cpp  concurrent_queue.h  executor.h  gtest_main.cpp  json_reader.cpp  json_reader.h  logging.h  macros.h  metrics.h  pretty_print.cpp  pretty_print.h  process_group.cpp  process_group.h  process_group_test.cpp  range.h  range_test.cpp  scope_guard.h  slice.h  state_dict.cpp  tensor_helper.h  threadpool.cpp  threadpool.h  threadpool_test.cpp  time.cpp  time.h  timer.cpp  timer.h  torch_utils.cpp  torch_utils.h  type_traits.h
src/engine/: CMakeLists.txt  batch.cpp  batch.h  batch_test.cpp  concurrent_queue.h  engine.cpp  engine.h  engine_factory.cpp  engine_factory.h  engine_metrics.cpp  engine_metrics.h  executor.cpp  executor.h  executor_test.cpp  llm_engine.cpp  llm_engine.h  model_runner.cpp  model_runner.h  parameters.h  utils.cpp  utils.h  utils_test.cpp  vlm_engine.cpp  vlm_engine.h  vlm_worker.cpp  vlm_worker.h  worker.cpp  worker.h  worker_test.cpp
src/gtest_main/: CMakeLists.txt  gtest_main.cpp
src/handlers/: CMakeLists.txt  call_data.h  chat_handler.cpp  chat_handler.h  completion_handler.cpp  completion_handler.h  handler_metrics.cpp  handler_metrics.h  llm_handler.cpp  llm_handler.h  models_handler.cpp  models_handler.h  sampling_params.h  utils.cpp  utils.h  uuid.cpp  uuid.h  vlm_handler.cpp  vlm_handler.h
src/huggingface/: CMakeLists.txt  Cargo.toml  safetensors.h  tokenizers.h
src/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h  dispatch.h  fused_moe_kernels.cu  fused_moe_kernels.h  gptq_cuda_kernel_64.cu  kv_cache_kernels.cu  kv_cache_kernels.h  layernorm_kernels.cu  layernorm_kernels.h  layernrom_kernels_test.cu  pos_embedding_kernel.cu  pos_embedding_kernels.cu  pos_embedding_kernels.h  reduce_kernel_utils.cuh  rms_norm_kernel.cu
src/layers/: CMakeLists.txt  activation.cpp  activation.h  activation_test.cpp  attention.cpp  attention.h  attention_alibi.cpp  attention_alibi.h  attention_rope.cpp  attention_rope.h  attention_test.cpp  embedding.h  fused_linear.cpp  fused_linear.h  fused_moe.cpp  fused_moe.h  layers.cpp  layers.h  layers_test.cpp  linear.cpp  linear.h  linear_impl.cpp  linear_impl.h  linear_test.cpp  model_parallel.cpp  model_parallel.h  multi_parallel_linear.cpp  norm.h  normalization.h  normalization_test.cpp  parallel_linear.h  pos_embedding.cpp  pos_embedding.h  pos_embedding_test.cpp  qkv_linear.cpp  qkv_linear.h  qkv_linear_test.cpp  qkv_parallel_linear.cpp  qkv_parallel_linear.h  qlinear.cpp  (+7 more)
src/memory/: CMakeLists.txt  block.cpp  block.h  block_allocator.cpp  block_allocator.h  block_allocator_test.cpp  block_manager.cpp  block_manager.h  block_manager_test.cpp  cache_args.h  cache_manager.cpp  cache_manager.h  cache_planner.cpp  cache_planner.h  kv_cache.cpp  kv_cache.h  kv_cache_test.cpp  memory.cpp  memory.h  memory_planner.h  prefix_cache.cpp  prefix_cache.h  prefix_cache_test.cpp
src/model_loader/: CMakeLists.txt  args_loader.cpp  args_loader.h  args_overrider.cpp  args_overrider.h  model_downloader.cpp  model_downloader.h  model_loader.cpp  model_loader.h  state_dict.cpp  state_dict.h  state_dict_test.cpp  tensor_utils.cpp  tensor_utils.h
src/model_parallel/: CMakeLists.txt  model_parallel.cpp  model_parallel.h  parallel_args.h  process_group.cpp  process_group.h  process_group_test.cpp
src/models/: CMakeLists.txt  README.md  aquila.h  args.h  baichuan.h  bloom.h  causal_lm.cpp  causal_lm.h  causal_vlm.cpp  causal_vlm.h  chatglm.h  conversation.cpp  conversation.h  dialog.cpp  dialog.h  embedding.cpp  embedding.h  gemma.h  gemma2.h  gpt2.h  gpt_j.h  gpt_neox.h  hf_llama2.h  input_parameters.h  internlm.h  layers.h  layers_test.cpp  linear.cpp  linear.h  llama.h  llama2.h  llama2_hf.h  llama2_test.cpp  llama_test.cpp  mistral.h  model_args.cpp  model_args.h  model_loader.cpp  model_loader.h  model_registry.cpp  (+11 more)
src/module/: CMakeLists.txt  cloneable.h  module.cpp  module.h  module_holder.h  module_list.h  module_test.cpp  modulelist.h  pimpl-inl.h
src/modules/: sparse.h
src/python/: CMakeLists.txt  llm.py  py_wrapper_test.py  py_wrappers.cpp  pybind.cpp
src/quantization/: CMakeLists.txt  pack_utils.cpp  pack_utils.h  pack_utils_test.cpp  qlinear_awq_impl.cpp  qlinear_awq_impl.h  qlinear_awq_marlin_impl.cpp  qlinear_awq_marlin_impl.h  qlinear_exllama_impl.cpp  qlinear_exllama_impl.h  qlinear_exllamav2_impl.cpp  qlinear_exllamav2_impl.h  qlinear_gptq_impl.cpp  qlinear_gptq_impl.h  qlinear_gptq_marlin_impl.cpp  qlinear_gptq_marlin_impl.h  qlinear_impl.cpp  qlinear_impl.h  qlinear_impl_test.cpp  qlinear_marlin_impl.cpp  qlinear_marlin_impl.h  quant_args.h
src/request/: CMakeLists.txt  incremental_decoder.cpp  incremental_decoder.h  output.h  request.cpp  request.h  sampling_parameter.h  sequence.cpp  sequence.h  sequence_test.cpp  slice.h  status.h  stopping_criteria.cpp  stopping_criteria.h  stopping_criteria_test.cpp
src/samplers/: CMakeLists.txt  logits_processor.cpp  logits_processor.h  sampler.cpp  sampler.h
src/sampling/: CMakeLists.txt  logits_processor.cpp  logits_processor.h  logits_processor_test.cpp  (+5 more)
(+790 files in other folders)
