add_subdirectory(common)
add_subdirectory(kernels)
add_subdirectory(tokenizer)
add_subdirectory(layers)
add_subdirectory(models)
add_subdirectory(model_loader)
add_subdirectory(sampling)
add_subdirectory(request)
add_subdirectory(memory)
add_subdirectory(scheduler)
add_subdirectory(engine)
add_subdirectory(server)
add_subdirectory(benchmark)
