add_subdirectory(gtest_main)
add_subdirectory(kernels)

if (NOT BUILD_KERNEL_ONLY)
  add_subdirectory(chat_template)
  add_subdirectory(common)
  add_subdirectory(handlers)
  add_subdirectory(tokenizer)
  add_subdirectory(layers)
  add_subdirectory(models)
  add_subdirectory(model_loader)
  add_subdirectory(model_parallel)
  add_subdirectory(sampling)
  add_subdirectory(request)
  add_subdirectory(memory)
  add_subdirectory(scheduler)
  add_subdirectory(speculative)
  add_subdirectory(engine)
  add_subdirectory(server)
  add_subdirectory(benchmark)
  add_subdirectory(huggingface)
endif()
