[package]
name = "huggingface"
version = "0.4.0"
edition = "2021"

[lib]
name = "huggingface"
crate-type = ["staticlib"]

[profile.release]
lto = "fat"

[dependencies]
thiserror = "2.0"
safetensors = "0.5.3"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"