include(cc_library)
include(cc_test)

cc_library(
  NAME
    linear 
  HDRS
    linear.h
    qkv_linear.h
    linear_impl.h
    fused_linear.h
    weight_utils.h
  SRCS
    linear.cpp
    qkv_linear.cpp
    linear_impl.cpp
    fused_linear.cpp
    weight_utils.cpp
  DEPS
    :state_dict
    :model_parallel
    :quantization
    :kernels
    glog::glog
    gflags::gflags
    torch
)

cc_library(
  NAME 
    pos_embedding
  HDRS 
    pos_embedding.h
  SRCS 
    pos_embedding.cpp
  DEPS
    :state_dict
    :memory
    :kernels
    glog::glog
    gflags::gflags
    torch
)

cc_library(
  NAME 
    layers
  HDRS 
    normalization.h
    embedding.h
    activation.h
  SRCS 
    activation.cpp
  DEPS
    :state_dict
    :memory
    :linear
    :pos_embedding
    :attention
    :kernels
    glog::glog
    gflags::gflags
    torch
)

cc_test(
  NAME
    layers_test
  SRCS
    activation_test.cpp
    pos_embedding_test.cpp
    normalization_test.cpp
    linear_test.cpp
    qkv_linear_test.cpp
  DEPS
    :layers
    :state_dict
    absl::random_random
    GTest::gtest_main
)

add_subdirectory(attention)